--- a/source/文档内容元素/代码块和代码注释.md
+++ b/source/文档内容元素/代码块和代码注释.md
@@ -11,4 +11,4 @@
 
 - 一行注释不能太长，太长时应适当进行断句并切分到下一行。
 - 一行注释末尾建议加上标点符号，一般是句号；与下一行的内容承接时，用逗号。
-- 必须根据代码块中定义的语法选择相应的注释符，不能自创注释符。
+- 必须根据代码块中定义的语法选择相应的注释符，不能自行创造注释符。
